fixed navbar spacing

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -28,5 +28,4 @@ body {
 
 .gcamp_header a {
   color: #FFFFFF;
-  padding-left: 4.8em;
 }
